# douyin_merger

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/: config.example.json  cookies.example.json  core.py  xb.py
