[project]
name = "douyin-merger"
version = "0.1.0"
description = ""
authors = [
    {name = "lalaking666"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "pycryptodome (>=3.23.0,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
